# edge-fire-detection

./: .dockerignore  .gitignore  DESIGN.md  EDGE_EVALUATION.md  MODEL_USAGE.md  README.md  build-distributed.sh  build-experiment.sh  build-local.sh  clean_dataset.py  compare_two_models.py  comparison_report.md  create_mock_onnx.py  deploy-distributed.sh  deploy-local.sh  edge_compatibility_comparison.py  export_onnx.py  export_torchscript.py  quantize_int8.py  report.tex  setup.md  teardown-distributed.sh  teardown-local.sh  test_model.py  test_torch_load.py  test_video_frames.py
app/: .gitignore  APP_SUMMARY.md  CMakeLists.txt  Dockerfile  QUICKSTART.md  README.md  build.sh  prepare_input.py
app-distributed/cloud-monitoring/: alertmanager.yaml  grafana-dashboards-config-cm.yaml  grafana-datasource-cm.yaml  grafana.yaml  prometheus.yaml
app-distributed/edge/node/frame-extractor/: CMakeLists.txt  Dockerfile  configmap.yaml  deployment.yaml  extractor.py
app-experiment/: experiment-cloud.yaml  experiment-edge.yaml
app-experiment/extractor/: Dockerfile  extractor.py
app-experiment/inference/: Dockerfile  inference.py
app/cloud-monitoring/: alertmanager.yaml  grafana-dashboard-json-cm.yaml  grafana.yaml  prometheus.yaml
app/cloud-monitoring/alertmanager/: entrypoint.sh
app/cloud-monitoring/grafana/: entrypoint.sh  run.sh
app/cloud-monitoring/grafana/provisioning/dashboards/: fire-detection.json
app/cloud-monitoring/prometheus/: Dockerfile  alerts.yml  prometheus.yml  run.sh
app/cloud/model-server/: deployment.yaml
app/cloud/model-sync/: cronjob.yaml
app/cloud/monitoring/: grafana-dashboard.json
app/devices/frame-extractor/: CMakeLists.txt  Dockerfile  configmap.yaml  deployment.yaml  extractor.cpp  extractor.py
app/edge/binhphuoc/exporter/: deployment.yaml  fire_detector.py  metrics.py
app/edge/binhphuoc/exporter/src/: requirements.txt  run.sh
app/edge/binhphuoc/frame-extractor/: Dockerfile  deployment.yaml  extractor.cpp  extractor.py
app/edge/binhphuoc/inference/: Dockerfile  deployment.yaml  inference.py  service.yaml
app/edge/binhphuoc/mqtt/: deployment.yaml
app/edge/dalat/frame-extractor/: configmap.yaml  deployment.yaml
app/edge/dalat/inference/: deployment.yaml  service.yaml
app/edge/dalat/mqtt/: deployment.yaml  service.yaml
app/edge/inference/: deployment.yaml  inference.cpp  service.yaml
app/edge/mqtt/: deployment.yaml  service.yaml
app/edge/node/exporter/: deployment.yaml
app/edge/node/exporter/src/: Dockerfile  test_detector.py
app/edge/node/frame-extractor/: Dockerfile  configmap.yaml  deployment.yaml  extractor.py
app/edge/node/inference/: Dockerfile  deployment.yaml  hpa.yaml  inference.py  service.yaml
app/edge/node/mqtt/: Dockerfile  deployment.yaml  mqtt.conf  service.yaml
app/include/: fire_detector.h  preprocess.h
app/src/: fire_detector.cpp  main.cpp
deploy/: README.md  namespace.yaml
deploy/edge/binhphuoc/inference/: CMakeLists.txt  deployment.yaml
deploy/frame-extractor/: configmap.yaml  deployment.yaml  extractor.py
deploy/inference/: Dockerfile.bridge  bridge.py  deployment.yaml  service.yaml
deploy/k3s/: install-master.sh  join-edge.sh
deploy/model-server/: Dockerfile  deployment.yaml  server.py
deploy/model-sync/: cronjob.yaml
deploy/monitoring/: grafana-dashboard.json  install.sh  prometheus-values.yaml
deploy/mqtt/: deployment.yaml  service.yaml
distillation_experiment/: README.md
distillation_experiment/teacher/: train_teacher.py
edge_test/: extractor.py  inference.py
experiments/knowledge_distillation/: QUICKSTART.md  config.py  setup.sh  train_teacher.py
fire-detection-monitoring/: ARCHITECTURE.md  DASHBOARD_GRAFANA_PROMETHEUS.md  README.md  TEST_GUIDE.md  docker-compose.yml  run-all.sh  setup.md  test_fire_alerts.py  test_system.py
fire-detection-monitoring/alertmanager/: Dockerfile  alertmanager.yml  run.sh
fire-detection-monitoring/docs/: DEPLOY_AI_MODEL.md
fire-detection-monitoring/exporter/: fire_detector.py  main.py  metrics.py  mqtt_handler.py  notification.py  requirements.txt  run.sh
fire-detection-monitoring/grafana/: Dockerfile  grafana.ini  run.sh
fire-detection-monitoring/k8s-manifests/: alertmanager.yaml  exporter.yaml  mosquitto.yaml
fire-detection-monitoring/mosquitto/: Dockerfile  run.sh
fire-detection-monitoring/nginx/: Dockerfile  nginx.conf  run.sh
fire-detection-monitoring/prometheus/: Dockerfile  alerts.yml  entrypoint.sh  prometheus.yml  run.sh
model/: test_trained_model.py  train_fire_detection.py
report/: architecture.drawio  patch.py  report.tex  sample.tex
trainning/: organize_dataset.py  quantize_models.py  train_fire_detection.py
(+43 files in other folders)
